--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -76,7 +76,7 @@
       "generic-error": "We cannot process some of your input. Please check and update your answers.",
       "required": "An answer is required for this question. Please adjust and try again.",
       "number": "The answer needs to be a number. Please adjust and try again.",
-      "date": "The date is not valid. Please enter a valid date. A valid date follows DD-MM-YYYY format, for example: 31-12-1970.",
+      "date": "The date format you inputted is not valid. A valid date format example is 31-12-1970 which follows day-month-year, DD-MM-YYYY",
       "phone-number": "We couldn't verify this phone-number. Please adjust and try again.",
       "email": "The email does not have a valid format. Please adjust and try again."
     }
