AB#3644 Add label for phoneNumberPlaceholder in HO-portal design-page

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -114,6 +114,7 @@
         "highestScoresX": "Top X highest scores included",
         "meetingDocuments": "Meeting documents",
         "notifications": "Notification messages",
+        "phoneNumberPlaceholder": "Notification-number example value",
         "description": "Description: general",
         "descLocation": "Description: location",
         "descHumanitarianObjective": "Description: Humanatarian objective",
