--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -160,7 +160,7 @@
   "q-and-a-set": {
     "validation": {
       "date": "The date format you inputted is not valid. A valid date format example is 31-12-1970 which follows day-month-year, DD-MM-YYYY",
-      "email": "The email does not have a valid format. Please adjust and try again.",
+      "email": "The email needs to have a valid format. For example: 'full.name@example.com'. Please adjust and try again.",
       "generic-error": "We cannot process some of your input. Please check and update your answers.",
       "number": "The answer needs to be a number. Please adjust and try again.",
       "phone-number": "We couldn't verify this phone-number. Please adjust and try again.",
