AB#3651 Align input-components in all interfaces

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -73,12 +73,12 @@
   },
   "q-and-a-set": {
     "validation": {
-      "generic-error": "We cannot process some of your input. Please check and update your answers.",
-      "required": "An answer is required for this question. Please adjust and try again.",
-      "number": "The answer needs to be a number. Please adjust and try again.",
       "date": "The date format you inputted is not valid. A valid date format example is 31-12-1970 which follows day-month-year, DD-MM-YYYY",
+      "email": "The email needs to have a valid format. For example: 'full.name@example.com'. Please adjust and try again.",
+      "generic-error": "We cannot process some of your input. Please check and update your answers.",
+      "number": "The answer needs to be a number. Please adjust and try again.",
       "phone-number": "We couldn't verify this phone-number. Please adjust and try again.",
-      "email": "The email does not have a valid format. Please adjust and try again."
+      "required": "An answer is required for this question. Please adjust and try again."
     }
   },
   "qr-scanner": {
