AB#3752 Generic "submit" = "send"

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -174,7 +174,7 @@
     "cancel-button": "Cancel",
     "close-button": "Close",
     "more-info": "Read more...",
-    "submit-button": "Submit"
+    "submit-button": "Send"
   },
   "speak-text": {
     "loading": "Loading",
