--- a/interfaces/PA-App/src/assets/i18n/ny_MW.json
+++ b/interfaces/PA-App/src/assets/i18n/ny_MW.json
@@ -37,8 +37,7 @@
       "introduction-information": "Kuti muthandizike bwino komanso kuti mukhale pandondomeko yabwino, tifuna mbiri yanu",
       "more-info-questions": "Zinthu zokhudza munthu",
       "please-confirm": "Pansipa pali zinthu zokhuza inu. Onani ndipo mupereke",
-      "submit": "Sungani mbiri yanga",
-      "submit-confirm": "Tumizani mbiri yanga"
+      "submit-confirm": "Sungani mbiri yanga"
     },
     "handle-proof": {
       "creating": "Mwatipatsa mbiri yanu yokwanila kuti tione ngati mungakhale nawo mu pulogalamu",
