--- a/interfaces/PA-App/src/assets/i18n/om_ET.json
+++ b/interfaces/PA-App/src/assets/i18n/om_ET.json
@@ -40,8 +40,7 @@
       "introduction-information": "Gargaarsa jira jedhame argachuu keessaniifi adeemsa bilisaa ta'uu isaa mirkaneeffachuuf odeeffannoo dhuunfaa hanga tokko ni barbaadna.",
       "more-info-questions": "Waa'ee odeeffannoo dhuunfaa",
       "please-confirm": "Kan armaan gadii odeeffannoo keessan waliigalaati. Maaloo ilaaluun mirkaneeffadhaa galchaa.",
-      "submit": "Odeeffannoo koo ol naaf kaa'i",
-      "submit-confirm": "Odeeffannoo koo galchi"
+      "submit-confirm": "Odeeffannoo koo ol naaf kaa'i"
     },
     "handle-proof": {},
     "login-identity": {
