--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -1,9 +1,9 @@
 {
   "account": {
     "change-password": "Change password",
-    "delete-account-header": "Enter your password if you are sure you want to delete your Digital ID",
-    "delete-account-message": "Deleting your Digital ID is irreversible, all your data will be lost!",
-    "delete-digital-id": "Delete Digital ID",
+    "delete-account-header": "Enter your password if you are sure you want to delete your account",
+    "delete-account-message": "Deleting your account is irreversible, all your data will be lost!",
+    "delete-digital-id": "Delete account",
     "delete-fail": "Something went wrong, your account could not by fully deleted.",
     "delete-success": "Your account has been succesfully deleted. You will now logout",
     "enter-password": "Your Password",
@@ -68,14 +68,14 @@
       "more-info-qr": "About QR-codes",
       "no": "No",
       "question": "Does the Aidworker/Volunteer have a pre-printed QR-code to scan?",
-      "result-ok": "The scanned QR-code is now connected to your Digital ID and personal information. Please keep your physical QR-code safe.",
+      "result-ok": "The scanned QR-code is now connected to your account and personal information. Please keep your physical QR-code safe.",
       "start-scanner": "Start scanner",
       "try-again": "Try again",
       "yes": "Yes"
     },
     "registration-summary": {
       "documents": "Make sure to have these documents ready:",
-      "info-message": "To activate your Digital ID<br> <br> When you create your Digital ID you will receive a print out of your digital ID that looks like this.<br> You will need to bring this and the following physical documents below to a meeting with an Aid worker to Activate your Digital ID.<br> <ul> <li>Your National Identity Card</li> </ul><br> What if I don’t have a card? Then you have 2 options: <ol> <li>Bring a letter from the chief that confirms his/her identity</li> <li>Bring your X number (need the name of this number like BSN number) from the National Bureau of Registration. You will have to pay for a new one the price will be X.</li> </ol>",
+      "info-message": "To activate your account<br> <br> When you create your account you will receive a print out of your digital ID that looks like this.<br> You will need to bring this and the following physical documents below to a meeting with an Aid worker to activate your account.<br> <ul> <li>Your National Identity Card</li> </ul><br> What if I don’t have a card? Then you have 2 options: <ol> <li>Bring a letter from the chief that confirms his/her identity</li> <li>Bring your X number (need the name of this number like BSN number) from the National Bureau of Registration. You will have to pay for a new one the price will be X.</li> </ol>",
       "more-info-documents": "About these documents",
       "no-validation-conclusion": "Thank you. Your registration is now complete. <br><br> You should receive an SMS on the provided phone number shortly that confirms your registration.<br><br>You will be informed if you have been included within [X amount of time]. <br><br> This is the final message for now.",
       "qr-code": "Please show this QR-code to the aidworker when asked.",
