--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -32,7 +32,7 @@
     "create-identity": {
       "conclusion": "Great! You have created an account.",
       "confirm-password": "Confirm password:",
-      "create-password-explanation": "Enter a password of at least {{minimalLength}} characters:",
+      "create-password-explanation": "Create a password of at least {{minimalLength}} numbers:",
       "create-username": "Enter your full name:",
       "introduction": "To create an account you need to complete the following steps.",
       "local": {
@@ -45,7 +45,7 @@
       "password-too-short": "Please enter at least {{minimalLength}} characters.",
       "unequal-passwords": "The passwords you created are not the same. Please try again.",
       "username-not-unique": "The name you entered is not unique. Please try again.",
-      "username-password": "Enter your name as on your National ID card and create a password."
+      "username-password": "Enter your full name and create a password."
     },
     "enroll-in-program": {
       "change": "Change my information",
