--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -26,7 +26,7 @@
       "agree": "I agree",
       "answer": "I have read/listened to how my personal information will be stored securely. I understand that it is required to receive cash based aid. <br><br> I understand who sees my personal information.<br><br> By pressing \"I agree\" I choose to participate in the aid program. <br><br> By pressing \"I disagree\" I choose not to participate in the aid program.",
       "disagree": "I disagree",
-      "more-info-personal-information": "Personal information",
+      "more-info-personal-information": "About personal information",
       "question": "To apply for this aid program you need to agree to <strong>how we secure your personal information.</strong><br /><br /> Please read or listen to how we secure your personal information."
     },
     "create-identity": {
